[dependencies]
async-trait = "0.1.88"
clap = { version = "4", features = ["derive"] }
pingora = { git = "https://github.com/BSteffaniak/pingora", branch = "fix-sfv-breaking-changes", features = ["proxy"] }
proxy = "0.1.0"
# serde = { workspace = true }
# serde_json = { workspace = true }
thiserror = { workspace = true }
# tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sfv = "0.10"
hickory-resolver = "0.25.1"

[lints]
workspace = true

[package]
name = "cli"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
